# canhttp

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  publish.yml
canhttp/: CHANGELOG.md  Cargo.toml
canhttp/src/: lib.rs
canhttp/src/cycles/: mod.rs  tests.rs
canhttp/src/http/json/: tests.rs
canhttp/src/multi/: mod.rs
canhttp/src/retry/: tests.rs
examples/http_canister/: Cargo.toml
examples/http_canister/src/: main.rs
examples/http_canister/tests/: tests.rs
